k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: django-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: django

  template:
    metadata:
      labels:
        app: django

    spec:
      containers:
      - name: django

        image: amanpushp/django-nginx-lab:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "200m"
            memory: "256Mi"

        livenessProbe:

          httpGet:
            path: /
            port: 8000

          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:

          httpGet:
            path: /
            port: 8000

          initialDelaySeconds: 10
          periodSeconds: 5
