k8s/django-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: django-service

spec:

  selector:
    app: django

  type: NodePort

  ports:

  - port: 8000
    targetPort: 8000
    nodePort: 30081
