k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: django-ingress

spec:

  ingressClassName: nginx

  rules:

  - host: django.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:

          service:
            name: django-service

            port:
              number: 8000
